@@ -8,21 +8,23 @@ import com.amazonaws.services.s3.model.GeneratePresignedUrlRequest;
 import com.backend.dto.presigned.ImageRequestList;
 import com.backend.dto.presigned.ImageResponse;
 import com.backend.dto.presigned.ImageResponseList;
-import com.backend.util.S3Util;
+import com.backend.util.etc.S3Util;
 import java.net.URL;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
 public class S3Service {
     private final AmazonS3Client amazonS3Client;
     private final S3Util s3Util;
+
+    @Transactional(readOnly = true)
     public ImageResponseList createPresignedUrls(ImageRequestList request) {
         List<ImageResponse> urlResponses = request.imageList()
                 .stream()
@@ -34,7 +36,8 @@ public class S3Service {
                     String imageUrl = s3Util.createImageUrl(fileName);
                     return new ImageResponse(presignedUrl, imageUrl);
                 })
-                .collect(Collectors.toList());
+                .toList();
+
 
         return new ImageResponseList(urlResponses);
     }
